--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?Muli&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: 'Muli', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  overflow: hidden;
 }
