--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -29,6 +29,27 @@
   opacity: 0;
 }
 
+.panel.active {
+  flex: 5;
+}
+
+.panel.active h3 {
+  opacity: 1;
+  transition: opacity 0.4s ease-in 0.5s;
+  color: rgb(49, 49, 51);
+}
+
 .panel img {
   width: 10vw;
+}
+
+@media (max-width: 500px) {
+  .images__container {
+    width: 100vw;
+  }
+
+  .panel:nth-of-type(4),
+  .panel:nth-of-type(5) {
+    display: none;
+  }
 }
