--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,6 +1,9 @@
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 100vh;
 }
 
 .images__container {
@@ -12,21 +15,21 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 80vh;
+  height: 60vh;
   border-radius: 50px;
   flex: 0.5;
   position: relative;
   transition: flex 0.5s ease-in;
-  color: #fff;
   cursor: pointer;
   margin: 10px;
+  text-align: center;
+  font-size: larger;
 }
 
 .panel h3 {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
+  position: relative;
   opacity: 0;
+  top: -3vw;
 }
 
 .panel.active {
@@ -36,7 +39,7 @@
 .panel.active h3 {
   opacity: 1;
   transition: opacity 0.4s ease-in 0.5s;
-  color: rgb(49, 49, 51);
+  /* color: rgb(250, 250, 250); */
 }
 
 .panel img {
